package src.core.enums;

public enum SignalState {
    RED, YELLOW, GREEN;
}
