package com.practice.utils;

import com.practice.states.interfaces.SignalState;

public interface SignalStateSelector {
    
    SignalState selectSignalState();

}
